--- a/react/src/components/zomato/zomato.css
+++ b/react/src/components/zomato/zomato.css
@@ -79,16 +79,12 @@ h1 {
 }
 h5 {
   font-weight: 400;
-  /* background-color: aqua; */
   margin: 0%;
 }
 p {
   font-weight: 300;
   font-size: large;
-  /* background-color: aquamarine; */
   margin: 0%;
-  /* padding: 6px;
-  margin-left: 3px; */
 }
 
 .imgwrapper {
@@ -106,9 +102,59 @@ p {
   height: 60px;
 }
 
+.heading {
+  margin-left: 90px;
+  margin-right: 90px;
+}
+
+.text {
+  display: flex;
+  justify-content: space-between;
+  height: 35px;
+  font-size: larger;
+}
+
+h2 {
+  font-weight: 500;
+  height: 15px;
+}
+a {
+  text-decoration: none;
+  font-weight: 200;
+  font-size: large;
+  margin-top: 8px;
+  color: rgb(213, 70, 70);
+}
+h6 {
+  font-weight: 200;
+  margin-top: 10px;
+}
 .collection {
-  background-color: aquamarine;
-  width: 300px;
-  height: 350px;
-  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 80px;
+  /* background-color: aquamarine; */
+}
+
+.collectioncard {
+  color: aliceblue;
+  background-image: url(https://pythonevents.io/wp-content/uploads/Stadium-Ticketing-System-1300x867.jpg);
+  background-size: cover;
+  width: 280px;
+  height: 330px;
+  border-radius: 6px;
+  margin-top: 40px;
+  /* background-clor: blueviolet; */
+}
+
+.block {
+  font-size: 20px;
+  margin-top: 280px;
+  /* background-color: #904545; */
+}
+.tag p {
+  /* background-color: antiquewhite; */
+  font-size: 40px;
+  font-weight: 350;
+  padding: 80px;
 }
