--- a/react/src/components/zomato/zomato.css
+++ b/react/src/components/zomato/zomato.css
@@ -146,7 +146,7 @@ h6 {
   overflow: hidden;
 }
 
-.block {
+.collectioncardheading {
   font-size: 20px;
   position: absolute;
   bottom: 0;
@@ -155,9 +155,21 @@ h6 {
   background: linear-gradient(rgba(0, 0, 0, 0), black);
 }
 
-.tag p {
-  /* background-color: antiquewhite; */
+.tag {
+  background-color: antiquewhite;
   font-size: 40px;
   font-weight: 350;
+  /* padding: 80px; */
+}
+
+.block {
+  background-color: violet;
   padding: 80px;
+}
+.smallblock {
+  background-color: #db6060;
+  width: 300px;
+  height: 80px;
+  border-style: groove;
+  border-radius: 10px;
 }
